--- a/styles/Index.module.css
+++ b/styles/Index.module.css
@@ -165,6 +165,7 @@
   justify-content: center;
   align-items: center;
   text-align: center;
+  line-height: 1;
 
   animation-play-state: paused;
   animation-timing-function: cubic-bezier(0, 1.36, 0.95, 0.63);
